card spacing and delect account text change fixes

--- a/scss/newthemes/_card.scss
+++ b/scss/newthemes/_card.scss
@@ -117,6 +117,8 @@
         > img{
             width: 100%;
             border-radius: 8px;
+            height: 272px;
+            object-fit: cover;
         }
         .tme-wrap{
             position: absolute;
