--- a/scss/newthemes/_streaming.scss
+++ b/scss/newthemes/_streaming.scss
@@ -291,6 +291,7 @@
                             border-radius: 50%;
                             cursor: pointer;
                             border-color: $white-color;
+                            margin-top:-3px;
                         }
                         &::-moz-range-thumb {
                             width: 10px;
@@ -299,6 +300,18 @@
                             border-radius: 50%;
                             cursor: pointer;
                             border-color: $white-color;
+                            margin-top:-3px;
+                        }
+                        &::-webkit-slider-runnable-track {
+                            width: 100%;
+                            height: 4px;
+                            background: $white-color;
+                            border-radius: 2px;
+                        }
+                        &:focus{
+                            &::-webkit-slider-runnable-track {
+                                background: $white-color;
+                            }
                         }
                     }
 
